--- a/index.html
+++ b/index.html
@@ -15,4 +15,16 @@
       </div>
     </header>
   </body>
+  <footer>  
+    <div class="container">
+      <div class="position-list-style">
+        <ul class="list-bottom">
+          <li>Status</li>
+          <li>About</li>
+          <li>Blog</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </html>
